@@ -992,7 +992,7 @@ void App_Glom::fill_menu_tables()
 
       ui_description += "<menuitem action='" + action_name + "' />";
 
-      Glib::RefPtr<Gtk::Action> refAction = Gtk::Action::create(action_name, table_info->get_title_or_name()); //TODO: Ignore mnemonics.
+      Glib::RefPtr<Gtk::Action> refAction = Gtk::Action::create(action_name, GlomUtils::string_escape_underscores(table_info->get_title_or_name()));
       m_refNavTablesActionGroup->add(refAction,
         sigc::bind( sigc::mem_fun(*m_pFrame, &Frame_Glom::on_box_tables_selected), table_info->get_name()) );
 
@@ -1055,7 +1055,7 @@ void App_Glom::fill_menu_reports(const Glib::ustring& table_name)
 
         ui_description += "<menuitem action='" + action_name + "' />";
 
-        Glib::RefPtr<Gtk::Action> refAction = Gtk::Action::create(action_name, report->get_title_or_name()); //TODO: Ignore mnemonics.
+        Glib::RefPtr<Gtk::Action> refAction = Gtk::Action::create( action_name, GlomUtils::string_escape_underscores(report->get_title_or_name()));
         m_refNavReportsActionGroup->add(refAction,
           sigc::bind( sigc::mem_fun(*m_pFrame, &Frame_Glom::on_menu_report_selected), report->get_name()) );
 
