@@ -285,8 +285,6 @@ protected:
 
   App_Glom* get_application();
 
-  static Glib::ustring string_escape_underscores(const Glib::ustring& text);
-
   typedef Gtk::VBox type_base;
 
   //Member widgets:
